[package]
name = "rslabs"
version = "0.1.0"
authors = ["LinkWu <wjianl@qq.com>"]
edition = "2018"
default-run = "rslabs"

[dependencies]
nalgebra = "0.18.0"
winit = "0.20.0-alpha3"
image = "0.22.2"
rand = "0.7.2"
libm = "0.1.4"
rustc_apfloat = "0.1.3"
clap = "2.33.0"

[[example]]
name = "eg001"
path = "./example/eg001.rs"

[[example]]
name = "eg002"
path = "./example/eg002.rs"

[[example]]
name = "chapter003"
path = "./example/chapter003.rs"

[[example]]
name = "chapter004"
path = "./example/chapter004.rs"

[[example]]
name = "chapter005"
path = "./example/chapter005.rs"

[[example]]
name = "chapter006"
path = "./example/chapter006.rs"

[[example]]
name = "chapter008"
path = "./example/chapter008.rs"

[[example]]
name = "chapter010"
path = "./example/chapter010.rs"

[[example]]
name = "chapter013"
path = "./example/chapter013.rs"
