[package]
name = "btseed"
version = "0.1.0"
authors = ["LinkWu <wjianl@qq.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = {version = "0.6.0", features = ["std"]}
btcodec = {version = "0.1.0", path = "../btcodec"}
futures = "0.3.4"
async-std = "1.5.0"
png = "0.16.3"
