[package]
name = "light2d"
version = "0.1.0"
authors = ["LinkWu <wjianl@qq.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.2"
rand = "0.7.2"
libm = "0.1.4"
rustc_apfloat = "0.1.3"
clap = "2.33.0"
